# QSimpleUpdater

./: .gitattributes  .gitignore  Authors.txt  CLAUDE.md  CMakeLists.txt  COPYING.md  QSimpleUpdater.pri  QSimpleUpdater.pro  README.md  Readme.md
.github/workflows/: main.yml
Example/: example.cpp  example.h  example.pro  example.ui
Example/src/: Window.cpp  main.cpp
QSimpleUpdater/: qsimpleupdater.pri  readme.txt
QSimpleUpdater/dependencies/OpenSSL-Win32/lib/: libeay32.lib
QSimpleUpdater/dependencies/win32/: libeay32.lib
QSimpleUpdater/doc/: QSimpleUpdater.qdocconf
QSimpleUpdater/res/: res.qrc
QSimpleUpdater/src/: QSimpleUpdater  qsimpleupdater.cpp  qsimpleupdater.h
QSimpleUpdater/src/dialogs/: download_dialog.cpp  download_dialog.h  download_dialog.ui  progress_dialog.cpp  progress_dialog.h  progress_dialog.ui
doc/config/: doxyfile
doc/output/html/: annotated.html  class_downloader-members.html  class_downloader.html  class_q_simple_updater-members.html  class_q_simple_updater.html  class_updater-members.html  class_updater.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html
doc/output/html/d0/d2f/: _q_simple_updater_8h_source.html
doc/output/html/d0/d80/: class_q_simple_updater.html
doc/output/html/d1/d88/: _downloader_8h_source.html
doc/output/html/d3/d1d/: class_updater.html
doc/output/html/d4/d1d/: class_q_simple_updater-members.html
doc/output/html/d4/d44/: class_updater-members.html
doc/output/html/d5/d7d/: class_downloader-members.html
doc/output/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_2.js  functions_1.js  functions_7.js  functions_8.js  searchdata.js
etc/resources/: version.rc.in
etc/scripts/: format-code.bat  format-code.sh
example/definitions/: updates.json
include/: DownloaderGUI.h  DownloaderLite.h  IDownloader.h  QSimpleUpdater.h  Updater.h
src/: AuthenticateDialog.cpp  AuthenticateDialog.h  Downloader.cpp  Downloader.h  DownloaderGUI.cpp  DownloaderLite.cpp  IDownloader.cpp  QSimpleUpdater.cpp  Updater.cpp  Updater.h
tests/: Test_Downloader.h  Test_QSimpleUpdater.h  Test_Updater.h  Test_Versioning.h  main.cpp
tutorial/: CMakeLists.txt
tutorial/definitions/: updates.json
tutorial/src/: Window.cpp  Window.h  main.cpp
(+2 files in other folders)
